--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Discord game bot.",
   "main": "./src/Farmy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "keywords": [
     "bot",
